--- a/octofit-tracker/backend/requirements.txt
+++ b/octofit-tracker/backend/requirements.txt
@@ -1,1 +1,3 @@
-Create the requirements.txt file for the backend with all the necessary Python dependencies.
+# Backend dependencies for OctoFit Tracker
+Django>=3.2,<4.0
+pymongo>=3.12,<4.0
